# ssh-mcp

./: .dockerignore  .gitignore  .trivyignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
config/: servers.example.toml
src/ssh_mcp/: __init__.py  config.py  formatting.py  healthcheck.py  models.py  server.py  ssh.py
tests/: conftest.py  test_config.py  test_formatting.py  test_healthcheck.py  test_http_transport.py  test_logging.py  test_models.py  test_otel.py  test_server.py  test_ssh.py
