[project]
name = "ssh-mcp"
dynamic = ["version"]
description = "SSH MCP server for managing infrastructure via Claude Code"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SSH MCP Contributors"},
]
keywords = ["mcp", "ssh", "claude", "infrastructure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.2.0,<2.0.0",
    "asyncssh>=2.14.0",
]

[project.scripts]
ssh-mcp = "ssh_mcp.server:main"

[project.urls]
Homepage = "https://github.com/blackaxgit/ssh-mcp"
Repository = "https://github.com/blackaxgit/ssh-mcp"
Issues = "https://github.com/blackaxgit/ssh-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/ssh_mcp/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
