[project]
name = "ssh-mcp"
dynamic = ["version"]
description = "SSH MCP server for managing infrastructure via Claude Code"
requires-python = ">=3.11"
license = {text = "MPL-2.0"}
authors = [
    {name = "SSH MCP Contributors"},
]
keywords = ["mcp", "ssh", "claude", "infrastructure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.27.0,<2.0.0",
    "asyncssh>=2.14.0,<3.0.0",
    "structlog>=25.5.0,<26.0.0",
    "orjson>=3.10.0,<4.0.0",
    "pydantic>=2.10.0,<3.0.0",
]

[project.scripts]
ssh-mcp = "ssh_mcp.server:main"

[project.urls]
Homepage = "https://github.com/blackaxgit/ssh-mcp"
Repository = "https://github.com/blackaxgit/ssh-mcp"
Issues = "https://github.com/blackaxgit/ssh-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "mypy>=1.15",
    "pip-audit>=2.9",
    "hypothesis>=6.151.0,<7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/ssh_mcp/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "asyncssh.*"
ignore_missing_imports = true
